--- a/elements.html
+++ b/elements.html
@@ -22,9 +22,7 @@
     <div id="wrapper">
       <!-- Header -->
       <header id="header">
-        <a href="index.html" class="logo"
-          ><strong>Forty</strong> <span>by HTML5 UP</span></a
-        >
+        <a href="index.html" class="logo"><span>Home</span></a>
         <nav>
           <a href="#menu">Menu</a>
         </nav>
